neue Activitys angelegt

--- a/FIPLY/App/app/src/main/AndroidManifest.xml
+++ b/FIPLY/App/app/src/main/AndroidManifest.xml
@@ -8,11 +8,37 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name=".MainActivity">
+
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".UebungskatalogActivity">
+            <intent-filter>
+                <action android:name="fiply.UEBUNGSKATALOGACTIVITY" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".TrainingSessionActivity">
+            <intent-filter>
+                <action android:name="fiply.TRAININGSESSIONACTIVITY" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".ErstelleUser_Activity">
+            <intent-filter>
+                <action android:name="fiply.ERSTELLEUSERACTIVITY" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
     </application>
+
 </manifest>
