--- a/FIPLY/App/app/src/main/AndroidManifest.xml
+++ b/FIPLY/App/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
 
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:theme="@style/CodeFontMain">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -32,7 +33,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ErstelleUser_Activity">
+        <activity android:name=".ErstelleUserActivity">
             <intent-filter>
                 <action android:name="fiply.ERSTELLEUSERACTIVITY" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -47,8 +48,5 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-
-
     </application>
-
 </manifest>
