--- a/FIPLY/App/app/src/main/AndroidManifest.xml
+++ b/FIPLY/App/app/src/main/AndroidManifest.xml
@@ -14,8 +14,8 @@
             android:label="@string/app_name"
             android:theme="@style/CodeFontMain">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="fiply.MAINACTIVITY" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
 
@@ -48,5 +48,14 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".SplashActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
     </application>
+
 </manifest>
