Abstürzen der SplashActivity wurde repariert

--- a/FIPLY/App/app/src/main/AndroidManifest.xml
+++ b/FIPLY/App/app/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
             android:name=".MenuActivity"
             android:label="@string/app_name">
             <intent-filter>
-                <action android:name="fiply.MENU" />
+                <action android:name="fiply.MENUACTIVITY" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
