Espresso initialisiert - final

--- a/FIPLY/App/app/build.gradle
+++ b/FIPLY/App/app/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -24,11 +25,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:design:23.1.0'
-<<<<<<< HEAD
 
     androidTestCompile ('com.android.support.test.espresso:espresso-core:2.0')
     androidTestCompile 'com.android.support.test:testing-support-lib:0.1'
-    
-=======
->>>>>>> parent of 6dd0c43... Espresso testen initialisiert
 }
