--- a/FIPLY/App/app/src/main/AndroidManifest.xml
+++ b/FIPLY/App/app/src/main/AndroidManifest.xml
@@ -10,14 +10,13 @@
         android:theme="@style/AppTheme" >
 
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/CodeFontMain">
+            android:name=".MainActivity">
             <intent-filter>
                 <action android:name="fiply.MAINACTIVITY" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
 
         <activity android:name=".UebungskatalogActivity">
             <intent-filter>
@@ -41,8 +40,7 @@
         </activity>
 
         <activity
-            android:name=".MenuActivity"
-            android:label="@string/app_name">
+            android:name=".MenuActivity">
             <intent-filter>
                 <action android:name="fiply.MENUACTIVITY" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -54,7 +52,6 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
     </application>
 
