--- a/FIPLY/App/app/src/main/AndroidManifest.xml
+++ b/FIPLY/App/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:theme="@style/AppThemeDark">
 
         <activity
-            android:name=".MainActivity">
+            android:name=".MainActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="fiply.MAINACTIVITY" />
                 <category android:name="android.intent.category.DEFAULT" />
