--- a/FIPLY/App/app/build.gradle
+++ b/FIPLY/App/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.0'
     androidTestCompile 'com.android.support.test:testing-support-lib:0.1'
     compile 'javax.annotation:javax.annotation-api:1.2'
+    compile 'com.google.code.findbugs:jsr305:2.0.1'
 }
