--- a/FIPLY/App/app/src/main/AndroidManifest.xml
+++ b/FIPLY/App/app/src/main/AndroidManifest.xml
@@ -10,9 +10,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppThemeDark"
-
-        android:name="android.support.multidex.MultiDexApplication">
+        android:theme="@style/AppThemeDark">
 
         <activity
             android:name=".menu.MainActivity"
