--- a/FIPLY/App/app/src/main/AndroidManifest.xml
+++ b/FIPLY/App/app/src/main/AndroidManifest.xml
@@ -1,41 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="htl_leonding.fiplyteam.fiply">
+<manifest package="htl_leonding.fiplyteam.fiply"
+          xmlns:android="http://schemas.android.com/apk/res/android"
+    >
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
     <application
         android:allowBackup="true"
         android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppThemeDark">
+        android:theme="@style/AppThemeDark"
+        >
 
         <activity
             android:name=".menu.MainActivity"
             android:configChanges="keyboardHidden|orientation"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            >
             <intent-filter>
-                <action android:name="fiply.MAINACTIVITY" />
-                <category android:name="android.intent.category.DEFAULT" />
+                <action android:name="fiply.MAINACTIVITY"/>
+                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
 
         <activity android:name=".menu.SplashActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
 
-        <activity android:name=".trainingssession.VideoFullscreenActivity"
+        <activity
+            android:name=".trainingssession.VideoFullscreenActivity"
             android:configChanges="keyboardHidden|orientation"
-            android:screenOrientation="landscape">
+            android:screenOrientation="landscape"
+            >
             <intent-filter>
-                <action android:name="fiply.VIDEO" />
-                <category android:name="android.intent.category.DEFAULT" />
+                <action android:name="fiply.VIDEO"/>
+                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
-            </activity>
+        </activity>
     </application>
 </manifest>
