--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
-
-FIPLY/App/app/app.iml
-
-FIPLY/App/.idea/gradle.xml
 FIPLY/App/app/app.iml
 FIPLY/App/.idea/misc.xml
 FIPLY/App/.idea/gradle.xml
-FIPLY/App/app/app.iml
-FIPLY/App/.idea/misc.xml
+FIPLY/App/.idea/vcs.xml
