--- a/FIPLY/App/app/build.gradle
+++ b/FIPLY/App/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'javax.annotation:javax.annotation-api:1.2'
     compile 'com.google.code.findbugs:jsr305:2.0.1'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+    compile 'com.jjoe64:graphview:4.0.1'
 }
