Added a FIPLY Latex Folder and updated .gitignore
Added a FIPLY Latex Folder with a Basefile and Subfiles to structure our
written diploma thesis
Updated .gitignore to suit our Latex needs

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ FIPLY/App/app/app.iml
 FIPLY/App/.idea/misc.xml
 FIPLY/App/.idea/gradle.xml
 FIPLY/App/.idea/vcs.xml
+*.log
+*.toc
+*.aux
+*.synctex.gz
