Settings and Notifications work as intended

--- a/FIPLY/App/app/src/main/AndroidManifest.xml
+++ b/FIPLY/App/app/src/main/AndroidManifest.xml
@@ -38,6 +38,13 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".menu.Settings">
+            <intent-filter>
+                <action android:name="android.intent.action.Settings"/>
+
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
         <activity
             android:name=".trainingssession.VideoFullscreenActivity"
             android:configChanges="keyboardHidden|orientation"
