--- a/FIPLY/App/app/build.gradle
+++ b/FIPLY/App/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile 'com.google.code.findbugs:jsr305:2.0.1'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.jjoe64:graphview:4.0.1'
+    compile 'com.google.android.gms:play-services-ads:8.4.0'
 }
