--- a/FIPLY/App/app/src/main/AndroidManifest.xml
+++ b/FIPLY/App/app/src/main/AndroidManifest.xml
@@ -13,12 +13,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppThemeDark"
-        >
+        android:theme="@style/AppThemeDark">
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id"
-            />
+            android:value="@string/facebook_app_id" />
 
         <activity
             android:name=".menu.MainActivity"
