Added Reset Functionality

--- a/FIPLY/App/app/src/main/AndroidManifest.xml
+++ b/FIPLY/App/app/src/main/AndroidManifest.xml
@@ -43,6 +43,13 @@
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
+        <activity android:name=".menu.Reset">
+            <intent-filter>
+                <action android:name="android.intent.action.Reset"/>
+
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
         <activity
             android:name=".trainingssession.VideoFullscreenActivity"
             android:configChanges="keyboardHidden|orientation"
