--- a/FIPLY/App/app/local.properties
+++ b/FIPLY/App/app/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Oct 18 16:55:48 CEST 2015
-sdk.dir=C\:\\Users\\Andreas\\AppData\\Local\\Android\\sdk
+#Sun Jan 15 22:05:41 CET 2017
+sdk.dir=D\:\\Android\\sdk
